Corregir indentación en steps

--- a/.github/workflows/mi-pipeline.yml
+++ b/.github/workflows/mi-pipeline.yml
@@ -7,8 +7,8 @@ jobs:
   mi-primer-trabajo:
     runs-on: ubuntu-latest
 
-steps:
-      - name: Descargar código
+    steps:
+      - name: Descargar codigo
         uses: actions/checkout@v4
       
       - name: Verificar archivo
