Corregir indentación en steps

--- a/.github/workflows/mi-pipeline.yml
+++ b/.github/workflows/mi-pipeline.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Verificar archivo
-        run: ls -l
+        run: grep "production" config/kubernetes.conf
